--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "13.4.1",
+    "node-base64-image": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.1",
