--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-base64-image": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-jsx-parser": "^1.29.0",
     "sass": "^1.62.1",
     "slugify": "^1.6.6"
   }
