Trying to get working on Vercel and locally

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/components/*": ["app/components/*"],
-			"@/data/*": ["app/data/*"]
+			"@/data/*": ["app/data/*"],
+			"@/*": ["app/*"],
 		}
 	}
 }
